tooling/nargo_cli/tests/snapshots/compile_failure/assert_constant_dynamic_struct_array/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Argument is not constant
   ┌─ src/main.nr:11:5
   │
11 │     assert_constant(foo_dynamic_array);
   │     ----------------------------------
   │
   = Call stack:
     1: main
             at src/main.nr:11:5

Aborting due to 1 previous error
